Add a Moby Dick page and a menu

--- a/tags.html
+++ b/tags.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>HTML Tags</title>
     <meta charset="utf-8">
   </head>
   <body>
+
+    <div>
+      <a href="index.html">Home</a>
+      <a href="tags.html">HTML Tags</a>
+      <a href="moby_dick.html">Moby Dick</a>
+    </div>
 
     <h1>Important HTML tags</h1>
 
@@ -114,6 +120,34 @@
     </td>
     <td><img src="http://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
   </tr>
+</table>
+<table>
+         <tr>
+          <td><code>div</code></td>
+          <td>division</td>
+          <td>define block-level section in document</td>
+        </tr>
+        <tr>
+          <td><code>header</code></td>
+          <td>header</td>
+          <td>label the page header</td>
+        </tr>
+        <tr>
+          <td><code>ol</code></td>
+          <td>ordered list</td>
+          <td>list elements in numerical order</td>
+        </tr>
+        <tr>
+          <td><code>ul</code></td>
+          <td>unordered list</td>
+          <td>list elements whose order doesn't matter</td>
+        </tr>
+        <tr>
+          <td><code>li</code></td>
+          <td>list item</td>
+          <td>include a list item (ordered or unordered)</td>
+        </tr>
+
 </table>
 
   </body>
