--- a/tags.html
+++ b/tags.html
@@ -6,10 +6,10 @@
   </head>
   <body>
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+    <div style="text-align: right;">
+      <a href="index.html" style="color: blue; text-decoration: none;">Home</a>
+      <a href="tags.html" style="color: blue; text-decoration: none; margin-left: 10px;">HTML Tags</a>
+      <a href="moby_dick.html" style="color: blue; text-decoration: none; margin: 0 0 0 10px;">Moby Dick</a>
     </div>
 
     <h1>Important HTML tags</h1>
@@ -41,14 +41,14 @@
     <th>Purpose</th>
   </tr>
   <tr>
-    <td><code>h1</code>&ndash;<code>h6</code></td>
-    <td>headings</td>
-    <td>include a heading (levels 1&ndash;6)</td>
+    <td style="padding: 10px;"><code>h1</code>&ndash;<code>h6</code></td>
+    <td style="padding: 10px;">headings</td>
+    <td style="padding: 10px;">include a heading (levels 1&ndash;6)</td>
   </tr>
   <tr>
-    <td><code>p</code></td>
-    <td>paragraph</td>
-    <td>include a paragraph of text</td>
+    <td style="padding: 10px;"><code>p</code></td>
+    <td style="padding: 10px;">paragraph</td>
+    <td style="padding: 10px;">include a paragraph of text</td>
   </tr>
   <tr>
     <td><code>table</code></td>
@@ -147,6 +147,62 @@
           <td>list item</td>
           <td>include a list item (ordered or unordered)</td>
         </tr>
+
+</table>
+
+
+<h2>Document Tags</h2>
+<table>
+  <tr>
+    <th>Tag</th>
+    <th>Name</th>
+    <th>Purpose</th>
+  </tr>
+  <tr>
+   <td style="padding: 10px;"><code>html</code></td>
+   <td style="padding: 10px;">html</td>
+   <td style="padding: 10px;">html..</td>
+ </tr>
+ <tr>
+  <td style="padding: 10px;"><code>head</code></td>
+  <td style="padding: 10px;">head</td>
+  <td style="padding: 10px;">head..</td>
+</tr>
+<tr>
+ <td style="padding: 10px;"><code>body</code></td>
+ <td style="padding: 10px;">body</td>
+ <td style="padding: 10px;">body..</td>
+</tr>
+<tr>
+ <td style="padding: 10px;"><code>title</code></td>
+ <td style="padding: 10px;">title</td>
+ <td style="padding: 10px;">title of the site</td>
+</tr>
+<tr>
+ <td style="padding: 10px;"><code>meta</code></td>
+ <td style="padding: 10px;">meta</td>
+ <td style="padding: 10px;">charset</td>
+</tr>
+<tr>
+ <td style="padding: 10px;"><code>blockquote</code></td>
+ <td style="padding: 10px;">block quotation</td>
+ <td style="padding: 10px;">show formatted quotation</td>
+</tr>
+<tr>
+ <td style="padding: 10px;"><code>br</code></td>
+ <td style="padding: 10px;">break</td>
+ <td style="padding: 10px;">enter line break</td>
+</tr>
+<tr>
+ <td style="padding: 10px;"><code>code</code></td>
+ <td style="padding: 10px;">code</td>
+ <td style="padding: 10px;">format as source code</td>
+</tr>
+<tr>
+ <td style="padding: 10px;"><code>span</code></td>
+ <td style="padding: 10px;">span</td>
+ <td style="padding: 10px;">define inline section in document</td>
+</tr>
 
 </table>
 
